# dpkgpromax

./: .gitmodules  README.md  commit-emoji.md
frontend/: 0001-windows-cross-platform.patch  CMakeCache.txt  CMakeLists.txt  Makefile  MyExecutable  cmake_install.cmake  dpkgpromax.dpm  files  lib.c  lib.h  main.c  ouch
